# BitArray-Exercise

./: BitArray.cpp  BitArray.h  CMakeLists.txt  CMakeProject7.h  Tests.cpp
